# clks

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.zh-CN.md  build.bdt
.github/workflows/: build-kernel.yml  style-check.yml
arch/x86_64/interrupt/: interrupt_stubs.S
arch/x86_64/startup/: boot.c  exec_stack_call.S
cmake/: check_tools.cmake
configs/menuconfig/: clks_features.json
include/clks/: boot.h  bootsplash.h  clboot.h  config.h  cpu.h  disk.h  display.h  driver.h  exec.h  framebuffer.h  inputm.h  interrupts.h  kernel.h  keyboard.h  limine.h  locale.h  log.h  net.h  panic_qr.h  pty.h  rust.h  scheduler.h  service.h  shell.h  syscall.h  task.h  ttf.h  tty.h  user.h  version.h  vm.h  wm.h
kernel/: userland.c
kernel/boot/clboot/: clboot.c
kernel/boot/limine/: limine_requests.c
kernel/core/: interrupts.c  kmain.c  log.c  panic.c  panic_qr.cpp  scheduler.c  service.c
kernel/font/: ttf.c
kernel/hal/audio/: pcspeaker.c
kernel/hal/video/: framebuffer.c  psf_font.c  psf_font.h
kernel/input/: inputm.c  keyboard.c  mouse.c
kernel/interface/: bootsplash.c  desktop.c  display.c  shell.c  tty.c  wm.c
kernel/interface/tty/: ansi.inc  draw_dirty.inc  output.inc  query.inc  screen.inc  scrollback_keys.inc  scrollback_search.inc  status.inc  switch_tick.inc
kernel/interface/wm/: create_present.inc  cursor_present.inc  focus_lifecycle.inc  init_query.inc  input_dispatch.inc  layers_background.inc  public_api.inc  rect_damage.inc  stats.inc  timing.inc  window_draw.inc  window_list.inc
kernel/memory/: heap.c  vm.c
kernel/runtime/: config.c  driver.c  elf64.c  exec.c  locale.c  net.c  pty.c  syscall.c  user.c  userland.c
kernel/runtime/exec/: argv_env.inc  common.inc  current.inc  dynlib.inc  dynlib_api.inc  fd.inc  fd_api.inc  log.inc  path_util.inc  proc_api.inc  process.inc  runtime.inc  signal.inc  signal_api.inc  tick.inc  vm.inc  vm_api.inc
kernel/runtime/syscall/core/: common.inc  dispatch.inc  journal.inc  metadata.inc  stats.inc  trace_names.inc
kernel/runtime/syscall/devices/: audio.inc  console_fb.inc
kernel/runtime/syscall/network/: net.inc
kernel/runtime/syscall/runtime/: fd_driver_dl.inc  process.inc  procfs_kdbg.inc
kernel/runtime/syscall/security/: usc.inc  user.inc
kernel/runtime/syscall/storage/: disk.inc  fs_read.inc  fs_write.inc
kernel/runtime/syscall/ui/: inputm.inc  wm.inc
kernel/storage/: disk.c  fs.c
kernel/storage/disk/: ata.inc  byteorder.inc  cache_io.inc  directory.inc  fat_alloc.inc  fat_layout.inc  file_chain.inc  format.inc  fsck.inc  path.inc  public_api.inc
kernel/support/: libc_compat.c
rust/src/: config.rs  klog.rs  lib.rs  path.rs  syscall_meta.rs  unicode.rs
rust/src/syscall/: abi.rs  consts.rs  ffi.rs  frame.rs  kdbg.rs  meta.rs  mod.rs  state.rs  stats.rs  text.rs  trace.rs  usc.rs  usercopy.rs
rust/src/syscall/handlers/: console.rs  dispatch.rs  fd_driver_dl.rs  fs.rs  mod.rs  net.rs  process.rs  storage.rs  ui.rs  user.rs
scripts/: menuconfig.py
